# Iris

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: CompilerFlags.cmake
Source/Iris/: CMakeLists.txt  Iris.hpp
Source/Iris/Base/: Log.cpp  Log.hpp  TypeName.hpp
Source/Iris/Core/: Core.cpp  Core.hpp  Defines.hpp
Tests/: BaseTest.cpp  CMakeLists.txt
Tests/Base/: LogTest.cpp
